--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,14 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
+      - name: create .env file
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          envkey_TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+          envkey_SECRET: ${{ secrets.SECRET }}
+      - name: directory content
+        run: ls -l
       - name: lint
         run: npm run eslint
       - name: build
